# serializer version: 1
# name: test_config_flow_preview_success[missing_entity_id]
  dict({
    'attributes': dict({
    }),
    'state': 'unavailable',
  })
# ---
# name: test_config_flow_preview_success[missing_hysteresis]
  dict({
    'attributes': dict({
      'entity_id': 'sensor.test_monitored',
      'friendly_name': 'Test Sensor',
      'hysteresis': 0.0,
      'invert': False,
      'lower': 20.0,
      'position': 'below',
      'sensor_value': 16.0,
      'type': 'lower',
      'upper': None,
    }),
    'state': 'on',
  })
# ---
# name: test_config_flow_preview_success[missing_upper_lower]
  dict({
    'attributes': dict({
      'friendly_name': 'Test Sensor',
    }),
    'state': 'unavailable',
  })
# ---
# name: test_config_flow_preview_success[success_missing_invert]
  dict({
    'attributes': dict({
      'entity_id': 'sensor.test_monitored',
      'friendly_name': 'Test Sensor',
      'hysteresis': 0.0,
      'invert': False,
      'lower': 20.0,
      'position': 'below',
      'sensor_value': 16.0,
      'type': 'lower',
      'upper': None,
    }),
    'state': 'on',
  })
# ---
# name: test_config_flow_preview_success[success_invert_false]
  dict({
    'attributes': dict({
      'entity_id': 'sensor.test_monitored',
      'friendly_name': 'Test Sensor',
      'hysteresis': 0.0,
      'invert': False,
      'lower': 20.0,
      'position': 'below',
      'sensor_value': 16.0,
      'type': 'lower',
      'upper': None,
    }),
    'state': 'on',
  })
# ---
# name: test_config_flow_preview_success[success_invert_true]
  dict({
    'attributes': dict({
      'entity_id': 'sensor.test_monitored',
      'friendly_name': 'Test Sensor',
      'hysteresis': 0.0,
      'invert': True,
      'lower': 20.0,
      'position': 'below',
      'sensor_value': 16.0,
      'type': 'lower',
      'upper': None,
    }),
    'state': 'off',
  })
# ---
# name: test_options_flow_preview
  dict({
    'attributes': dict({
      'entity_id': 'sensor.test_monitored',
      'friendly_name': 'Test Sensor',
      'hysteresis': 0.0,
      'invert': False,
      'lower': 20.0,
      'position': 'below',
      'sensor_value': 16.0,
      'type': 'lower',
      'upper': None,
    }),
    'state': 'on',
  })
# ---
